--- a/www/index.html
+++ b/www/index.html
@@ -2755,19 +2755,19 @@
             for (var i = 0; i < this.context_codemirrors.length; i++)
             {
                 this.context_codemirrors[i].refresh();
-                this.context_codemirrors[i].getWrapperElement().onclick=this.refresh_codemirrors;   
+                this.context_codemirrors[i].getWrapperElement().onmouseenter =this.refresh_codemirrors;   
             }
             for (var i = 0; i < this.program_codemirrors.length; i++)
                 for (var j = 0; j < this.program_codemirrors[i].length; j++)
                 {
                     this.program_codemirrors[i][j].refresh();
-                this.program_codemirrors[i][j].getWrapperElement().onclick=this.refresh_codemirrors;   
+                this.program_codemirrors[i][j].getWrapperElement().onmouseenter =this.refresh_codemirrors;   
                 }
             for (var i = 0; i < this.stage_codemirrors.length; i++)
                 for (var j = 0; j < this.stage_codemirrors[i].length; j++)
                 {
                     this.stage_codemirrors[i][j].refresh();;
-                this.program_codemirrors[i][j].getWrapperElement().onclick=this.refresh_codemirros;  
+                this.program_codemirrors[i][j].getWrapperElement().onmouseenter =this.refresh_codemirros;  
                 }
 
             window.edit_html_editor.refresh();
@@ -2775,10 +2775,10 @@
             window.create_html_editor.refresh();
             window.create_javascript_editor.refresh();
             
-            window.edit_html_editor.getWrapperElement().onclick=this.refresh_codemirros;  
-            window.edit_javascript_editor.getWrapperElement().onclick=this.refresh_codemirros;  
-            window.create_html_editor.getWrapperElement().onclick=this.refresh_codemirros;  
-            window.create_javascript_editor.getWrapperElement().onclick=this.refresh_codemirros;  
+            window.edit_html_editor.getWrapperElement().onmouseenter =this.refresh_codemirros;  
+            window.edit_javascript_editor.getWrapperElement().onmouseenter =this.refresh_codemirros;  
+            window.create_html_editor.getWrapperElement().onmouseenter =this.refresh_codemirros;  
+            window.create_javascript_editor.getWrapperElement().onmouseenter =this.refresh_codemirros;  
         }
 
         GlobalState.prototype.destroy_editors = function (name) {
