--- a/www/index.html
+++ b/www/index.html
@@ -2751,7 +2751,7 @@
             this.refresh_codemirrors();
         }
         GlobalState.prototype.refresh_codemirrors = function () {
-
+            console.log("asdf");
             for (var i = 0; i < this.context_codemirrors.length; i++)
             {
                 this.context_codemirrors[i].refresh();
