--- a/www/index.html
+++ b/www/index.html
@@ -2748,7 +2748,7 @@
             for (var i = 0; i < algorithm.pipeline.stages.length; i++)
                 this.add_stage(algorithm.pipeline.stages[i]);
 
-            function() { this.refresh_codemirrors() }.bind(this)();
+            this.refresh_codemirrors();
         }
         GlobalState.prototype.refresh_codemirrors = function () {
             for (var i = 0; i < this.context_codemirrors.length; i++)
